--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,5 +22,10 @@
     "dotenv": "16.5.0",
     "express": "5.1.0",
     "pg": "8.16.0"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "none"
   }
 }
