--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,14 +14,16 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/express": "^5.0.2",
-    "@types/node": "^22.15.29",
     "@types/pg": "^8.15.2",
     "typescript": "5.8.3"
   },
   "dependencies": {
+    "@types/bcrypt": "5.0.2",
+    "bcrypt": "6.0.0",
     "dotenv": "16.5.0",
     "express": "5.1.0",
-    "pg": "8.16.0"
+    "pg": "8.16.0",
+    "zod": "3.25.45"
   },
   "prettier": {
     "semi": false,
