--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,12 +13,12 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.2",
     "@types/pg": "^8.15.2",
     "typescript": "5.8.3"
   },
   "dependencies": {
-    "@types/bcrypt": "5.0.2",
     "bcrypt": "6.0.0",
     "dotenv": "16.5.0",
     "express": "5.1.0",
