--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,14 +14,18 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/pg": "^8.15.2",
     "typescript": "5.8.3"
   },
   "dependencies": {
     "bcrypt": "6.0.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "16.5.0",
     "express": "5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "8.16.0",
     "zod": "3.25.45"
   },
